# Tom-Shelby

./: .gitignore  README.md  Transcription class.txt  main.py  summariser.py  summarizer.py  summary.txt  test.py  transcription.py
client/YouTubeApp/: CMakeLists.txt  CMakeLists.txt.user.56e8edf  mainwindow.cpp  mainwindow.h  requestworker.h
server/: requirements.txt  transcription.py
